--- a/index.css
+++ b/index.css
@@ -57,4 +57,7 @@ btn:hover{
     margin: 20px auto 0;
     border-radius: 4px;
     cursor: pointer;
+    display: block;
+    text-align: center;
+    display: none;
 }
