--- a/style.css
+++ b/style.css
@@ -5,19 +5,20 @@
     box-sizing: border-box;
 }
 body{
-    background: #001e4d;
+    background: #1C1C1C;
 }
 .app {
-    background: #fff;
+    background: #9f5fe8;
     width: 90%;
     max-width: 600px;
     margin: 100px auto 0;
     border-radius: 10px;
     padding: 30px;
+    box-shadow: 0 0 10 0;
 }
 .app h1 {
     font-size: 25px;
-    color: #001e4d;
+    color: #180c25;
     font-weight: 600;
     border-bottom: 1px solid #333;
     padding-bottom: 30px;
@@ -27,25 +28,29 @@ body{
 }
 .quiz h2 {
     font-size: 18px;
-    color: #001e4d;
+    color: #180c25;
     font-weight: 600;
 }
 .btn {
-    background: #fff;
-    color: #222;
+    background: #8f54d1;
+    color: #180c25;
     font-weight: 500;
     width: 100%;
     border: 1px solid #222;
     padding: 10px;
     margin: 10px 0;
     text-align: left;
-    border-radius: 4px;
+    border-radius: 10px;
     cursor: pointer;
     transition: all 0.3s;
+    box-shadow: 0 0 6px 2px;
 }
-.btn:hover{
+.btn:hover:not([disabled]){
     background: #222;
     color: #fff;
+}
+.btn:disabled{
+    cursor:no-drop;
 }
 #next-btn{
     background: #001e4d;
