--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
     background: #1C1C1C;
 }
 .app {
-    background: #7e5f9e;
+    background: #ADD8E6;
     width: 90%;
     max-width: 600px;
     margin: 100px auto 0;
@@ -32,18 +32,18 @@ body{
     font-weight: 600;
 }
 .btn {
-    background: #7e5f9e;
+    background: #a9d4ef;
     color: #180c25;
     font-weight: 500;
     width: 100%;
-    border: 1px solid #7e5f9e;
+    border: 0.5px solid #a9d4ef;
     padding: 10px;
     margin: 10px 0;
     text-align: left;
     border-radius: 10px;
     cursor: pointer;
     transition: all 0.3s;
-    box-shadow: 0 0 6px 2px;
+    box-shadow: 0 0 4px 0;
 }
 .btn:hover:not([disabled]){
     background: #222;
