--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body{
     border-radius: 10px;
     cursor: pointer;
     transition: all 0.3s;
-    box-shadow: 0 0 4px 0;
+    box-shadow: 3px 2px 2px 0px;
 }
 .btn:hover:not([disabled]){
     background: #222;
